welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value maths
if (maths.abs(n-10) < 10)
    ^nearHundred:2: error: type mismatch;
 found   : Unit
 required: Boolean
if (maths.abs(n-10) < 10)
^